intro mobile overflow fix hopefully

--- a/css/site.scss
+++ b/css/site.scss
@@ -70,7 +70,7 @@ svg#sprites {
 	}
 	@media (max-width: 700px) {
 		display: grid;
-		grid-template-columns: auto 1fr;
+		grid-template-columns: 1fr 2fr;
 		row-gap: var(--content-gap);
 		img {
 			margin: 0;
